SDK适配
